objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_period__c</fullName>
        <label>Contract period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <description>This Customer  customer object</description>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <description>This Record type show teh Contract Employee details</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permanent</fullName>
        <active>true</active>
        <description>This record type for shows the Permanent Employee Details</description>
        <label>Permanent</label>
    </recordTypes>
</CustomObject>